Sat Jul  8 22:39:51 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/fe-gnome.c:
	  - Pop up the channels list dialog on connect if there are no
	    channels set to auto-join. (#346974)

Sat Jul  8 13:27:45 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* NEWS:
	  - Update for 0.13

Sat Jul  8 12:55:46 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/irc-network-editor.c:
	  - Remove the key in the model if there is no value entered.

Fri Jul  7 19:02:56 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	  - Preserve the selected text and set it in the PRIMARY clipboard
	    when switching sessions, so you can copy text from the text entry
	    in one session and paste it into the entry for another. (#345356)

Fri Jul  7 16:52:45 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	  - Remove some old, commented-out code.

Fri Jul  7 16:25:02 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/irc-network-editor.c:
	* src/fe-gnome/irc-network-editor.h:
	* data/irc-network-editor.glade:
	  - Add a "key" column to the channel autojoin list in the network
	    configuration dialog. (#321981)

Fri Jul  7 12:58:21 MDT 2006  Christian Persch <chpe@gnome.org>

	* configure.ac:
	* Makefile.am:
	  - Eliminate unneeded AM_GLIB_DEFINE_LOCALEDIR. (#346936)

Fri Jul  7 12:22:06 MDT 2006  Christian Persch <chpe@gnome.org>

	* plugins/python/Makefile.am:
	* plugins/url_scraper/Makefile.am:
	* plugins/perl/Makefile.am:
	* plugins/tcl/Makefile.am:
	* plugins/notification/Makefile.am:
	* plugins/autoaway/Makefile.am:
	* plugins/net-monitor/Makefile.am:
	* plugins/notify-osd/Makefile.am:
	* plugins/sound-notification/Makefile.am:
	* plugins/dbus/Makefile.am:
	* src/common/Makefile.am:
	* src/fe-gnome/Makefile.am:
	* configure.ac:
	* Makefile.am:
	  - Some minor improvements to the buildsystem. (#346877)
